# yfinance-grpc

./: .dockerignore  .goreleaser.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  client_example.py  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  server.py
.github/workflows/: proto-check.yml  release.yml  test.yml
api/proto/hello/v1/: hello.proto
api/proto/yfinance_grpc/v1/: market.proto  search.proto  sector.proto  ticker.proto
api/proto/yfinance_grpc/v1alpha1/: market.proto  search.proto  sector.proto  ticker.proto
docs/: grpcurl.md  rpc-reference.md
examples/: __init__.py  client_example.py
examples/go/: go.mod  main.go
src/: __init__.py  main.py  market_server.py  search_server.py  sector_server.py  server.py
tests/: README.md  __init__.py  test_integration.py  test_market_server.py  test_search_server.py  test_sector_server.py  test_server.py
